--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+ <div id="root"></div>
+  <script type="module">
+    import { createApp } from 'vue';
+    import App from './src/main.jsx';
+    createApp(App).mount('#root');
+  </script>
 </body>
 
 </html>
