--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/vite.svg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   <title>Vite + React</title>
 </head>
 
 <body>
- <div id="root"></div>
-  <script type="module">
-    import { createApp } from 'vue';
-    import App from './src/main.jsx';
-    createApp(App).mount('#root');
-  </script>
+  <div id="root"></div>
+  
 </body>
 
 </html>
